<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".UI.Controllers.AddDonationActivity">


    <TextView
        android:id="@+id/searchDonationNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Name" />

    <EditText
        android:id="@+id/searchDonationNameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/searchDonationHint"
        android:inputType="textPersonName"
        android:text=""
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/searchDonationCategoryText"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Category" />

    <Spinner
        android:id="@+id/searchDonationCategorySpinner"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/searchDonationLocationText"
        android:layout_width="match_parent"
        android:layout_marginTop="12dp"
        android:layout_height="wrap_content"
        android:text="@string/Location" />

    <Spinner
        android:id="@+id/searchDonationLocationSpinner"
        android:layout_width="match_parent"
        android:layout_marginTop="12dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/searchDonationSearchButton"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search" />

    <Button
        android:id="@+id/searchDonationCancelButton"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />
</LinearLayout>